Changes to security implementation